--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -1,18 +1,99 @@
 .sidebar__wrapper{
+    top: 80px;
     height: 100%;
-    border: 2px solid red;
-    width: 25vw;
-    position: fixed;
+    position: sticky;
     align-items: center;
+    flex: 0.2;
+    border-radius: 10px;
+    text-align: center;
+    height: fit-content;
+}
+
+.sidebar__top{
+    display: flex;
+    flex-direction: column;
+    /* align-items: center; */
+    border-bottom: 0;
+    border: 1px solid lightgray;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    background-color: white;
+    padding-bottom: 10px;
+}
+
+.sidebar__top > img {
+    margin-bottom: -20px;
+    width: 100%;
+    height: 60px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    object-fit: cover;
+}
+
+.sidebar__top > h4 {
+    color: grey;
 }
 
 .sidebar__avatar{
     width: 45px;
     height: 45px;
     border-radius: 50%;   
-    border: 1px solid red;
+    margin-bottom: 10px;
+    align-self: center;
+}
+
+.sidebar__stats{
+    margin-top: 20px;
 }
 
 .sidebar_stat{
-    
+    display: flex;
+    flex-direction: row;
 }
+
+.sidebar_stat > p {
+    color: grey;
+}
+
+.sidebar_stat p {
+    flex: 6;
+}
+
+.sidebar_stat > .sidebar__statnumber{
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    font-weight: bold;
+    color: #0a66c2;
+}
+
+.sidebar__bottom {
+    text-align: left;
+    padding: 10px;
+    border: 1px solid lightgray;
+    background-color: white;
+    border-radius: 10px;
+    margin-top: 10px;
+}
+
+.sidebar__recentItem{
+    display: flex;
+    font-size: 13px;
+    color: gray;
+    font-weight: bold;
+    cursor: pointer;
+    margin-bottom: 5px;
+    padding: 5px; 
+}
+
+.sidebar__recentItem:hover{
+    background-color: whitesmoke;
+    border-radius: 10px;
+    cursor: pointer;
+    color: black;
+}
+
+.sidebar__hash{
+    margin-left: 10px;
+    margin-right: 10px;
+}  
